@@ -78,6 +78,7 @@ Linux NetworX and many other contributors.
 <li>Dan Rusak (Bull)</li>
 <li>Eygene Ryabinkin (Kurchatov Institute, Russia)</li>
 <li>Federico Sacerdoti (D.E. Shaw)</li>
+<li>Rod Schultz (Bull)</li>
 <li>Jeff Squyres (LAM MPI)</li>
 <li>Prashanth Tamraparni (HP, India)</li>
 <li>Jimmy Tang (Trinity College, Ireland)</li>
@@ -89,6 +90,6 @@ Linux NetworX and many other contributors.
 <li>Anne-Marie Wunderlin (Bull)</li>
 </ul>
 
-<p style="text-align:center;">Last modified 23 September 2010</p>
+<p style="text-align:center;">Last modified 29 September 2010</p>
 
 <!--#include virtual="footer.txt"-->
